--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
+
+<div class="container">
+
     <h1>HELLO WORLD!</h1>
 
-    <form action="/logout" method="post">
+    <form action="/logout" method="get">
         <button>LOG OUT</button>
     </form>
 
-    <form action="/admin" method="post">
-        <button>ADMIN PAGE</button>
+    <form action="/change-password" method="post">
+
+        <input type="password" name="currentPass"> <br>
+        <input type="password" name="newPass"> <br>
+        <input type="password" name="reNewPass"> <br>
+        <button>CHANGE PASSWORD</button>
+
     </form>
+
+    <a sec:authorize="hasAnyRole('ROLE_ADMIN')" href="/admin">ADMIN PAGE</a>
+</div>
 </body>
 </html>
