--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="container">
+<div>
+    <div th:if="${param.SuccessAddUser !=null}" class="alert alert-warning alert-dismissible fade show bg-success color-dark" role="alert">
+        <strong>ADDED USER!</strong> We added user in system!
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div th:if="${param.EmailNotValid !=null}" class="alert alert-warning alert-dismissible fade show bg-danger color-dark" role="alert">
+        <strong>EMAIL NOT VALID!</strong> We don't add user in system!
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div th:if="${param.PasswordIncorrect !=null}" class="alert alert-warning alert-dismissible fade show bg-danger color-dark" role="alert">
+        <strong>PASSWORD INCORRECT!</strong> We don't add user in system!
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</div>
+
     <form action="/auth" method="post">
         <input type="text" name="email"> <br>
         <input type="password" name="password"> <br>
@@ -18,5 +39,6 @@
         <input type="password" name="rePassword"> <br>
         <button>REGISTER</button>
     </form>
+</div>
 </body>
 </html>
